# SERVER

./: .bandit  .env  .flake8  .pylintrc  .replit  500.html  CORPORATE_IIS_SETUP.txt  DIRECT_HTTPS_DEPLOYMENT.txt  IIS_SETUP_INSTRUCTIONS.txt  OPTIMIZATION_SUMMARY.md  README.md  README_LOCAL_FIX.md  RUN_AS_ADMINISTRATOR.txt  RUN_ON_PORT_443.txt  TECHNICAL_DOCUMENTATION.md  app.py  apply_optimizations.py  auth.py  cert.pem  config.py  cookies.txt  deploy.py  deploy_iis_config.bat  deploy_to_iis.bat  fix_pending_reports_locked.py  iis_web_config.xml  index.html  init_new_db.py  key.pem  local_smtp_test.py  manage_db.py  middleware.py  models.py  pyproject.toml  quick_restart.bat  replit.md  requirements.txt  run_as_admin.bat  run_local_backend.py  run_local_https.py  (+10 more)
.ipynb_checkpoints/: app-checkpoint.py  config-checkpoint.py  utils-checkpoint.py
api/: __init__.py  auth.py  config.py  database.py  database_performance.py  documentation.py  errors.py  files.py  keys.py  reports.py  schemas.py  security.py  tasks.py  users.py  versioning.py
attached_assets/: Pasted--Configuration-HTTPS-Server-https-automation-reports-mobilehmi-org-443-Direct-access-no--1756908262138_1756908262139.txt  Pasted--DEBUG-STARTUP-Current-directory-C-Windows-system32-Changing-to-project-directory-1756920900882_1756920900883.txt  Pasted--DEBUG-STARTUP-Current-directory-C-Windows-system32-Changing-to-project-directory-1756922145372_1756922145373.txt  Pasted--DEBUG-STARTUP-Current-directory-C-Windows-system32-Changing-to-project-directory-1756922343979_1756922343980.txt  Pasted--Debug-mode-on-INFO-werkzeug-31m-1mWARNING-This-is-a-development-server-Do-not-use-it-in-a--1756977034270_1756977034271.txt  Pasted--PS-E-report-generator-WORKINGCULLY-1-WORKINGCULLY-python-app-py-Initializing-SAT-Report-Ge-1756894781234_1756894781235.txt  Pasted--SAT-Report-Generator-Backend-Service-Startup--1756907730098_1756907730098.txt  Pasted--SAT-Report-Generator-IIS-Backend-Service--1756912415909_1756912415910.txt  Pasted--SAT-Report-Generator-Port-8080-Deployment--1756902352730_1756902352730.txt  Pasted--Software-Microsoft-Internet-Information-Services-10-0-Version-1-0-Date-2025-09-03-13-46-16--1756917033155_1756917033156.txt  Pasted--context-DOCUMENT-TITLE-Test-PROJECT-REFERENCE-TEST-123-DOCUMENT-REFERE-1756998608069_1756998608070.txt  Pasted-1-Email-Notification-Integration-Verify-SMTP-Configuration-Confirm-your-env-settings-SMTP-SER-1757433320172_1757433320173.txt  Pasted-Based-on-the-current-content-of-the-SAT-Report-Generator-page-here-are-some-potential-issues-and-su-1756372314977_1756372314978.txt  Pasted-BuildError-werkzeug-routing-exceptions-BuildError-Could-not-build-url-for-endpoint-dashboard-tm--1756980507756_1756980507757.txt  Pasted-Document-Information-Document-Title-DOCUMENT-TITLE-Project-reference-TEST-123-Document-Ref-1756994194371_1756994194372.txt  Pasted-Document-Information-Document-Title-DOCUMENT-TITLE-Project-reference-TEST-123-Document-Ref-1756994465106_1756994465107.txt  Pasted-E-report-generator-SERVER-python-app-py-Initializing-SAT-Report-Generator-2025-09-10-19-47-1757534296747_1757534296749.txt  Pasted-E-report-generator-SERVER-python-app-py-Initializing-SAT-Report-Generator-2025-09-10-20-07-1757535174278_1757535174280.txt  Pasted-E-report-generator-SERVER-python-app-py-Initializing-SAT-Report-Generator-2025-09-13-11-29-1757762970194_1757762970195.txt  Pasted-E-report-generator-SERVER-python-app-py-Initializing-SAT-Report-Generator-2025-09-13-12-04-1757765212519_1757765212521.txt  Pasted-E-report-generator-SERVER-python-app-py-Initializing-SAT-Report-Generator-Configuration-val-1757762363630_1757762363631.txt  Pasted-Enforce-Proper-Session-Expiry-and-Prevent-Back-Button-Access-To-ensure-users-are-logged-out-autom-1757434392524_1757434392525.txt  Pasted-INFO-werkzeug-127-0-0-1-03-Sep-2025-09-25-48-POST-generate-HTTP-1-1-200-INFO-werkzeug-12-1756892549418_1756892549419.txt  Pasted-INFO-werkzeug-127-0-0-1-04-Sep-2025-10-40-40-32mGET-dashboard-admin-HTTP-1-1-0m-302-I-1756983520131_1756983520132.txt  Pasted-Main-Finding-Unused-Space-When-Minimizing-When-you-minimize-or-reduce-the-browser-window-size-the-1756373669676_1756373669677.txt  Pasted-NFO-werkzeug-31m-1mWARNING-This-is-a-development-server-Do-not-use-it-in-a-production-deploymen-1756893850416_1756893850418.txt  Pasted-New-Notable-Details-on-the-Form-The-progress-sidebar-clearly-lists-and-describes-all-ten-steps-o-1756372562600_1756372562600.txt  Pasted-Next-High-Impact-Features-Roadmap-Building-on-your-solid-SAT-Report-Generator-foundation-here-are--1757434733991_1757434733992.txt  Pasted-Next-Steps-Completing-Your-SAT-Report-Generator-Platform-Your-codebase-is-robust-and-most-core-fea-1757434073543_1757434073544.txt  Pasted-PS-C-Windows-system32-cd-E-report-generator-SERVER-PS-E-report-generator-SERVER-python-app-p-1756917057736_1756917057737.txt  Pasted-PS-C-Windows-system32-netstat-an-findstr-443-TCP-0-0-0-0-443-0-0-0-0-0--1756916800951_1756916800952.txt  Pasted-PS-E-report-generator-SERVER-netstat-an-findstr-LISTENING-TCP-0-0-0-0-80-0-0--1756902782733_1756902782734.txt  Pasted-PS-E-report-generator-SERVER-python-app-py-Initializing-SAT-Report-Generator-2025-09-03-1-1756901438223_1756901438224.txt  Pasted-PS-E-report-generator-SERVER-python-app-py-Initializing-SAT-Report-Generator-2025-09-03-1-1756924349276_1756924349276.txt  Pasted-PS-E-report-generator-SERVER-python-app-py-Initializing-SAT-Report-Generator-2025-09-03-1-1756924535810_1756924535811.txt  Pasted-PS-E-report-generator-SERVER-python-app-py-Initializing-SAT-Report-Generator-2025-09-04-0-1756977845270_1756977845271.txt  Pasted-PS-E-report-generator-SERVER-python-app-py-Initializing-SAT-Report-Generator-2025-09-04-1-1756981538859_1756981538861.txt  Pasted-PS-E-report-generator-SERVER-python-app-py-Initializing-SAT-Report-Generator-2025-09-04-1-1756984151946_1756984151946.txt  Pasted-PS-E-report-generator-SERVER-python-app-py-Initializing-SAT-Report-Generator-2025-09-04-1-1756984932716_1756984932717.txt  (+26 more)
cache/: __init__.py  cdn.py  decorators.py  flask_cdn.py  monitoring.py  (+2 more)
(+160 files in other folders)
